# Qwen3.6-MTP

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
results/: benchmark_sweep.csv  crossover_summary.csv  generate_crossover.py
src/qwen3_6_mtp/: __init__.py  bench.py  bugs.py  crossover.py  hardware.py  tuner.py  types.py
src/qwen3_6_mtp/backends/: __init__.py  sglang.py  vllm.py
src/qwen_mtp/: bench.py
tests/: test_backends.py  test_bench.py  test_bugs.py  test_crossover.py  test_hardware.py  test_tuner.py  test_types.py
