[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwen-mtp"
version = "0.1.0"
description = "Hardware-aware MTP speculative decoding auto-tuner for Qwen3.6, with vLLM/SGLang backend normalization and bug detection."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "qwen-mtp contributors" },
]
keywords = [
    "qwen",
    "qwen3.6",
    "mtp",
    "speculative-decoding",
    "vllm",
    "sglang",
    "llm",
    "inference",
    "auto-tuner",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/qwen_mtp"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
